<resources>
    <string name="app_name">Chillax</string>
    <string name="def_name">Default user</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_remember_me">Remember me</string>
    <string name="action_age_appropriate">I am 18+</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_news">NewsFeed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_registration">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="birthday">Birthday</string>
    <string name="register">Register</string>
    <string name="first_name_required">first name is required</string>
    <string name="last_name_required">last name is required</string>
    <string name="email_required">e-mail is required</string>
    <string name="invalid_password">invalid password</string>
    <string name="birthday_required">birthday is required</string>
    <string name="illegal_age_notification">Registration failed\n Not now, little friend ;)</string>
    <string name="invalid_email">e-mail is not valid</string>
    <string name="preferences_file_key">USER_DATA</string>
    <string name="USER_EMAIL_KEY">USER_EMAIL</string>
    <string name="FIRST_NAME_KEY">FIRST_NAME</string>
    <string name="LAST_NAME_KEY">LAST_NAME</string>
    <string name="title_activity_appointment">Appointment</string>

    <string name="show_route">SHOW ROUTE</string>
    <string name="find_friends">FIND FRIENDS</string>
    <string name="places_to_go">PLACES</string>
    <string name="meet_up">MEET UP</string>

    <string name="upload_a_pic">Upload a pic</string>
    <string name="appointment_name">Appointment name</string>
    <string name="appointment_date">Choose date</string>
    <string name="appointment_time">Choose time</string>
    <string name="force_of_fun">Force of fun:</string>
    <string name="appointment_avatar">Appointment avatar</string>

    <string name="chosen_place">Chosen place</string>
    <string name="choose_another_place">Choose a place</string>
    <string name="invite_friends">Invite friends</string>
    <string name="create_appointment_string">Create an appointment</string>

    <string name="friend_name_surname">Friend Name Surname</string>

    <string name="no_account_yet">No account yet? Register here!</string>
    <string name="user_name">User Name</string>
    <string name="your_status">Your status</string>
    <string name="new_post">How do you feel today?</string>

    <string name="step_into_chillax">Log into Chillax</string>
    <string name="welcome_to_the_party">Nice time. Nice wine</string>
    <string name="you_added_friend">You added a friend!</string>
    <string name="post">Post</string>
    <string name="title_activity_friend_page">FriendPageActivity</string>


    <string name="hello_world">Hello world!</string>


    <string name="history_of_appointments">History of appointments</string>
    <string name="sober_mail">Sober person mail</string>
    <string name="used_email">Registration failed: email is already used</string>
    <string name="http_register_success_string">true</string>
    <string name="http_register_failure_string">false</string>

    <string name="developers">Developed by team</string>
    <string name="grey">GREY</string>
    <string name="specially_for">Specially for</string>
    <string name="dont_ever">Do not ever be lonely</string>
    <string name="hist_app">Create a new appointment</string>
    <string name="new_chat">Send</string>
    <string name="new_char_room_name">Type message here</string>
    <string name="invalid_credentials">Invalid login or password</string>
</resources>
